--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
     "recharts": "^2.0.9",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
